# SegmentationMaillage

./: .gitignore  CMakeLists.txt
Rapport/: Segmentation_CrouboisPerrier.tex
data/: bunny.off  horse.off  vaselion.off
include/: linear_cell_complex_3_viewer_qt.hh  unionfind.hh
src/: load_off.cc  load_tetmesh.cc  segmentation.cc
